<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/Main"
        android:title="@string/main"
        app:showAsAction="never" />

    <item android:id="@+id/felsberg"
        android:title="@string/felsberg"
        app:showAsAction="never" />

    <item android:id="@+id/fr_brummer"
        android:title="@string/fr_brummer"
        app:showAsAction="never" />

    <item android:id="@+id/hoch_stamm"
        android:title="@string/hoch_stamm"
        app:showAsAction="never" />

    <item android:id="@+id/schleiereule"
        android:title="@string/schleiereule"
        app:showAsAction="never" />

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="never" />

    <item android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never" />

</menu>