<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".HummelActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/HuTv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HuTV1"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/HuTv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HuTv2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HuTv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/HuTv3" />

            <ImageView
                android:id="@+id/HuIv1"
                android:layout_width="wrap_content"
                android:layout_height="232dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_hu_pflanze" />
        </LinearLayout>

        <Button
            android:id="@+id/HuBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HuBtn1" />

        <Button
            android:id="@+id/HuBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fun Facts" />

    </LinearLayout>
</ScrollView>
