<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SteinhaufenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sHTv1"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/ShUs_de"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sHTv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ShIh1_de" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="257dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sHtv3"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:text="@string/ShUh2_de" />

            <ImageView
                android:id="@+id/sHIv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_gestapelte_steine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sHTv4"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:text="@string/ShUh3_de" />

            <ImageView
                android:id="@+id/sHIv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_snake" />
        </LinearLayout>

        <TextView
            android:id="@+id/sHTv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ShUh4_de" />

        <Button
            android:id="@+id/sHBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:id="@+id/sHBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />
    </LinearLayout>

</ScrollView>