<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SchleiereuleActivity">


    <TextView
        android:id="@+id/SeTV1"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="Die Schleiereule - Jäger der Nacht" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SeTV2"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/SeTV2_de" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/seIv_1"
                android:layout_width="157dp"
                android:layout_height="295dp"
                android:layout_gravity="right"
                android:layout_marginRight="0dp"
                android:scaleType="fitStart"
                android:src="@drawable/schleiereule_1"
                app:srcCompat="@drawable/schleiereule_1" />

            <ImageView
                android:id="@+id/seIv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_103"
                app:srcCompat="@drawable/ic_103" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SeTV3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/SeTV3_de" />

        <ImageView
            android:id="@+id/seIv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_101" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/SeTV4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SeTV4_de" />

        <ImageView
            android:id="@+id/seIv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_203" />
    </LinearLayout>

    <Button
        android:id="@+id/seBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="zum Memory" />

    <Button
        android:id="@+id/seBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Fun Facts" />

</LinearLayout>
</ScrollView>